<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen8dp"
    android:layout_marginTop="@dimen/dimen8dp"
    android:layout_marginRight="@dimen/dimen8dp"
    android:background="@android:drawable/list_selector_background"
    android:elevation="@dimen/dimen4dp"
    card_view:cardCornerRadius="8dip"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:padding="@dimen/dimen4dp">

            <TextView
                android:id="@+id/tvPair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/list_item_pair_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/list_item_comment_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPair"
                android:layout_alignParentStart="true"
                android:text="@string/list_item_price_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTradingSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvComment"
                android:layout_alignParentEnd="true"
                android:text="@string/list_item_tradesysytem_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <LinearLayout
                android:id="@+id/topContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPrice"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:id="@+id/tvSl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/list_item_sl_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


                <TextView
                    android:id="@+id/tvPeriod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/list_item_period_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/topContainer"
                android:orientation="horizontal"
                android:weightSum="3">



                <TextView
                    android:id="@+id/tvTp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/list_item_tp_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:id="@+id/tvCmd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:text="@string/list_item_cmd_placeholder"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvActualTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bottomContainer"
                android:layout_alignParentStart="true"
                android:text="@string/list_item_time_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />


            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bottomContainer"
                android:layout_alignParentEnd="true"
                android:text="@string/list_item_id_placeholder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        </RelativeLayout>


    </RelativeLayout>


</androidx.cardview.widget.CardView>
